# codebase-navigator

./: .env.example  .gitignore  MANUAL_TESTING_GUIDE.md  README.md  pyproject.toml  requirements.txt  test_core.py
codebase_navigator/: __init__.py  cli.py
codebase_navigator/agents/: __init__.py  navigator_agent.py  response_models.py
codebase_navigator/core/: __init__.py  embeddings.py  github_analyzer.py  repository.py  vectorstore.py
codebase_navigator/tools/: __init__.py  code_tools.py  github_tools.py  patch_tools.py  tavily_tools.py
